# kilo-data

./: .gitignore  ATTRIBUTION.md  Cargo.toml  README.md
.github/workflows/: data-base.yml  data-edge.yml
config/: data-cadence.toml
crates/kilo-data/: Cargo.toml
crates/kilo-data/src/: catalog.rs  compile.rs  main.rs  normalize.rs  profile.rs
dataset/: README.md
dataset/canonical/: README.md
docs/: data-releases.md
reference-data/: CHECKSUMS.sha256  README.md  SOURCES.md  sources.toml
schemas/: canonical.v1.md  source-records.v1.json
scripts/: fetch-base.sh  fetch-edge.sh  verify-release-inputs.sh
