[workspace]
members = ["crates/kilo-data"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
arrow = "59.1.0"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
flate2 = "1.1.5"
hex = "0.4.3"
parquet = { version = "59.1.0", features = ["arrow", "zstd"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tar = "0.4.44"
toml = "0.9.8"
walkdir = "2.5.0"
