[package]
name = "kilo-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kilo-data"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arrow.workspace = true
clap.workspace = true
csv.workspace = true
flate2.workspace = true
hex.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
toml.workspace = true
walkdir.workspace = true
