[package]
name = "kilo-data"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic threat-intelligence and IP-reputation data pipeline"
repository = "https://github.com/copyleftdev/kilo-data"
keywords = ["cybersecurity", "threat-intelligence", "ip-reputation", "phishing", "parquet"]
categories = ["command-line-utilities"]

[[bin]]
name = "kilo-data"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arrow.workspace = true
clap.workspace = true
csv.workspace = true
flate2.workspace = true
hex.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
toml.workspace = true
walkdir.workspace = true
